// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render type 1`] = `
<i
  className="cf-s3e5cn"
  id={undefined}
  style={undefined}
>
  <div
    className="cf-1u9fru1"
    id={undefined}
    style={undefined}
  >
    Info-Sign
  </div>
</i>
`;

exports[`should render type/border/spin/muted/white 1`] = `
<i
  className="cf-4y9ki3"
  id={undefined}
  style={undefined}
>
  <div
    className="cf-1u9fru1"
    id={undefined}
    style={undefined}
  >
    Info-Sign
  </div>
</i>
`;

exports[`should render type/size 1`] = `
<i
  className="cf-s3e5cn"
  id={undefined}
  style={undefined}
>
  <div
    className="cf-1u9fru1"
    id={undefined}
    style={undefined}
  >
    Info-Sign
  </div>
</i>
`;
